Customize Color Theme

--- a/themes/next/layout/_partials/header/brand.njk
+++ b/themes/next/layout/_partials/header/brand.njk
@@ -18,6 +18,11 @@
       </div>
     {%- endif %}
 
+    {%- if theme.custom_logo and (theme.scheme === 'Gemini' or theme.scheme === 'Pisces') %}
+      <a>
+        <img class="custom-logo-image" src="{{ theme.custom_logo }}" alt="{{ title }}" type="checkbox">
+      </a>
+    {%- endif %}
     <a href="{{ config.root }}" class="brand" rel="start">
       <span class="logo-line-before"><i></i></span>
       <h1 class="site-title">{{ title }}</h1>
@@ -26,11 +31,11 @@
     {%- if subtitle %}
       <p class="site-subtitle" itemprop="description">{{ subtitle }}</p>
     {%- endif %}
-    {%- if theme.custom_logo and (theme.scheme === 'Gemini' or theme.scheme === 'Pisces') %}
+    {# {%- if theme.custom_logo and (theme.scheme === 'Gemini' or theme.scheme === 'Pisces') %}
       <a>
         <img class="custom-logo-image" src="{{ theme.custom_logo }}" alt="{{ title }}">
       </a>
-    {%- endif %}
+    {%- endif %} #}
   </div>
 
   <div class="site-nav-right">
