--- a/themes/next/source/css/_schemes/Pisces/_header.styl
+++ b/themes/next/source/css/_schemes/Pisces/_header.styl
@@ -1,5 +1,5 @@
 .site-brand-container {
-  background: $black-deep;
+  background: $green; //$black-deep;
 
   +tablet-mobile() {
     box-shadow: 0 0 16px rgba(0, 0, 0, .5);
@@ -19,7 +19,9 @@
 }
 
 .custom-logo-image {
-  margin-top: 20px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  height: 60px;
 
   +tablet-mobile() {
     display: none;
