--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -21,6 +21,7 @@ $blue-bright  = #87daff;
 $blue         = #0684bd;
 $blue-deep    = #262a30;
 $orange       = #fc6423;
+$green        = #047862;
 
 
 // Scaffolding
@@ -33,8 +34,8 @@ $text-color-dark              = $grey-light;
 // Global link color.
 $link-color                   = $black-light;
 $link-color-dark              = $grey-light;
-$link-hover-color             = $black-deep;
-$link-hover-color-dark        = $gainsboro;
+$link-hover-color             = $green; //$black-deep;
+$link-hover-color-dark        = $green; //$gainsboro;
 $link-decoration-color        = $grey-dark;
 
 $blockquote-color             = $grey-dim;
@@ -149,18 +150,18 @@ $highlight-gutter-foreground-dark = mix($highlight-background-dark, $highlight-f
 // Buttons
 // --------------------------------------------------
 $btn-default-radius                    = 0;
-$btn-default-bg                        = $black-deep;
-$btn-default-bg-dark                   = $black-deep;
+$btn-default-bg                        = $green; //$black-deep;
+$btn-default-bg-dark                   = $green; //$black-deep;
 $btn-default-color                     = white;
 $btn-default-color-dark                = $text-color-dark;
-$btn-default-border-color              = $black-deep;
+$btn-default-border-color              = $green; //$black-deep;
 $btn-default-border-color-dark         = $black-light;
 $btn-default-hover-bg                  = white;
 $btn-default-hover-bg-dark             = $grey-dim;
-$btn-default-hover-color               = $black-deep;
-$btn-default-hover-color-dark          = $text-color-dark;
-$btn-default-hover-border-color        = $black-deep;
-$btn-default-hover-border-color-dark   = $grey-dim;
+$btn-default-hover-color               = $green; //$black-deep;
+$btn-default-hover-color-dark          = $green; //$text-color-dark;
+$btn-default-hover-border-color        = $green; //$black-deep;
+$btn-default-hover-border-color-dark   = $green; //$grey-dim;
 
 
 // Pagination
@@ -194,7 +195,7 @@ $content-mobile-padding         = 8px;
 // Headband
 // --------------------------------------------------
 $headband-height                = 3px;
-$headband-bg                    = $black-deep;
+$headband-bg                    = $green; //$black-deep;
 
 
 // Section Header
@@ -268,7 +269,7 @@ $b2t-position-right           = 30px;
 $b2t-position-right-mobile    = 20px;
 $b2t-font-size                = 12px;
 $b2t-color                    = white;
-$b2t-bg-color                 = $black-deep;
+$b2t-bg-color                 = $green; //$black-deep;
 
 //  .post-expand .post-eof
 //  In Muse scheme, margin above and below the post separator
