--- a/themes/next/source/css/_variables/Pisces.styl
+++ b/themes/next/source/css/_variables/Pisces.styl
@@ -59,7 +59,7 @@ $btn-default-radius           = 2px;
 $btn-default-bg               = white;
 $btn-default-color            = $text-color;
 $btn-default-border-color     = $text-color;
-$btn-default-hover-bg         = $black-deep;
+$btn-default-hover-bg         = #047862; //$black-deep;
 $btn-default-hover-color      = white;
 
 // Back to top
