--- a/themes/next/layout/_partials/header/brand.njk
+++ b/themes/next/layout/_partials/header/brand.njk
@@ -20,8 +20,26 @@
 
     {%- if theme.custom_logo and (theme.scheme === 'Gemini' or theme.scheme === 'Pisces') %}
       <a>
-        <img class="custom-logo-image" src="{{ theme.custom_logo }}" alt="{{ title }}" type="checkbox">
+        <img class="custom-logo-image" src="{{ theme.custom_logo }}" alt="{{ title }}" onclick="toggleImg()">
       </a>
+      <script>
+        var darkmode_flag = false;
+        function toggleImg() {
+          const src = document.getElementsByClassName("custom-logo-image")[0].src;
+          if(src.includes("lubycon-logo-ha-brand-theme.svg")){
+            if(darkmode_flag === false){
+              document.getElementsByClassName("custom-logo-image")[0].src = "/images/lubycon-logo-ha-light.svg";
+              darkmode_flag = true;
+            }
+          }
+          else{
+            if(darkmode_flag === true){
+              document.getElementsByClassName("custom-logo-image")[0].src = "/images/lubycon-logo-ha-brand-theme.svg";
+              darkmode_flag = false;
+            }
+          }
+        }
+      </script>
     {%- endif %}
     <a href="{{ config.root }}" class="brand" rel="start">
       <span class="logo-line-before"><i></i></span>
