--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -56,5 +56,7 @@
   {%- if theme.pjax %}
     </div>
   {%- endif %}
+
+  <script id="dsq-count-scr" src="//jiminthebox.disqus.com/count.js" async></script>
 </body>
 </html>
