--- a/themes/next/layout/_partials/header/menu-item.njk
+++ b/themes/next/layout/_partials/header/menu-item.njk
@@ -8,7 +8,12 @@
 
     {%- set menuIcon = '' %}
     {%- if theme.menu_settings.icons %}
-      {%- set menuIcon = '<i class="' + value.split('||')[1] | trim + ' fa-fw"></i>' %}
+      {%- if name == 'Lubycon' %}
+        {%- set menuIcon = '<i class="' + value.split('||')[1] | trim + '"></i>' %}
+      {%- else %}
+        {%- set menuIcon = '<i class="' + value.split('||')[1] | trim + ' fa-fw"></i>' %}
+      {%- endif %}
+      <script> console.log('{{name}} out'); </script>
     {%- endif %}
     {%- set menuText = __('menu.' + name) | replace('menu.', '') %}
 
