--- a/themes/next/source/css/main.styl
+++ b/themes/next/source/css/main.styl
@@ -45,3 +45,40 @@ for $inject_mixin in hexo-config('injects.mixin')
 // --------------------------------------------------
 for $inject_style in hexo-config('injects.style')
   @import $inject_style;
+  
+@font-face {
+  font-family: 'lubycon-symbol-dark';
+  src:  url('fonts/lubycon-symbol-dark.eot?sqyz8u');
+  src:  url('fonts/lubycon-symbol-dark.eot?sqyz8u#iefix') format('embedded-opentype'),
+    url('fonts/lubycon-symbol-dark.ttf?sqyz8u') format('truetype'),
+    url('fonts/lubycon-symbol-dark.woff?sqyz8u') format('woff'),
+    url('fonts/lubycon-symbol-dark.svg?sqyz8u#lubycon-symbol-dark') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'lubycon-symbol-dark' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-lubycon-symbol-dark:before {
+  content: "\e900";
+  font-size:1.33333em;
+  line-height:.75em;
+  vertical-align:-.0667em;
+  text-align:center;
+  width:1.25em;
+  margin-right: .45em;
+}
