Fix Darkmode bug and Disqus load bug

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -57,6 +57,29 @@
     </div>
   {%- endif %}
 
+  <script>
+  ((w, d) => {
+    'use strict';
+    {%- if not config.next_nightmode.alpha and not theme.next_nightmode.alpha %}
+      let userScheme = localStorage.getItem('Scheme');
+      if (userScheme) d.documentElement.className = 'darkScheme';
+      const btn = d.querySelector('.night-mode');
+      w.addEventListener('keydown', e => {
+        if (e.altKey && e.keyCode == 88) btn.click();
+      });
+      btn.addEventListener('click', () => {
+        d.documentElement.classList.toggle('darkScheme');
+        if ( d.documentElement.classList.contains('darkScheme') ) {
+          localStorage.setItem('Scheme', 'Dark');
+          return;
+        }
+        localStorage.removeItem('Scheme');
+      });
+    {%- endif %}
+  })(window, document);
+  </script>
+
+
   <script id="dsq-count-scr" src="//jiminthebox.disqus.com/count.js" async></script>
 </body>
 </html>
