Re: Change back to top hover color

--- a/themes/next/source/css/_common/components/back-to-top.styl
+++ b/themes/next/source/css/_common/components/back-to-top.styl
@@ -22,7 +22,9 @@
   }
 
   &:hover {
-    color: $sidebar-highlight;
+    color: $green;
+    background: $gainsboro;
+    border: .1px solid $green;
   }
 
   &.back-to-top-on {
