--- a/themes/next/source/css/_variables/Pisces.styl
+++ b/themes/next/source/css/_variables/Pisces.styl
@@ -30,8 +30,8 @@ $subtitle-color                   = $grey-lighter;
 // Sidebar
 // --------------------------------------------------
 $sidebar-nav-color                = var(--text-color);
-$sidebar-nav-hover-color          = $gainsboro; //$orange
-$sidebar-highlight                = $gainsboro; //$orange
+$sidebar-nav-hover-color          = $orange
+$sidebar-highlight                = $orange;
 
 $site-author-image-width          = 120px;
 $site-author-image-border-width   = 1px;
