--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -22,6 +22,12 @@ $blue         = #0684bd;
 $blue-deep    = #262a30;
 $orange       = #fc6423;
 $green        = #047862;
+$ruby-red     = #e0115f;
+$sage-green   = #bcb88a;
+$seaweed      = #37412a;
+$ivory        = #fffff0;
+$honeydew     = #f0fff0;
+$snow         = #fffafa;
 
 
 // Scaffolding
@@ -133,8 +139,8 @@ $table-row-hover-bg-color-dark  = #363636;
 // Code & Code Blocks
 // --------------------------------------------------
 $code-font-family               = $font-family-monospace;
-$code-background                = $gainsboro;
-$code-foreground                = $black-light;
+$code-background                = $snow;
+$code-foreground                = $ruby-red;
 
 $highlight-background        = convert(hexo-config('highlight.light.background'));
 $highlight-foreground        = convert(hexo-config('highlight.light.foreground'));
