--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -36,7 +36,7 @@ for $headline in (1 .. 6) {
 
 p {
   margin: 0 0 20px 0;
-  font-size: $font-size-small;
+  font-size: $font-size-smaller;
 }
 
 a, span.exturl {
