--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -39,6 +39,10 @@ p {
   font-size: $font-size-small;
 }
 
+ul {
+  font-size: $font-size-small;
+}
+
 a, span.exturl {
   border-bottom: 1px solid $link-decoration-color;
   color: var(--link-color);
