Posting Deep Learning from scratch to image segmentation(1)

--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -43,6 +43,12 @@ ul {
   font-size: $font-size-small;
 }
 
+sup {
+  font-family: $font-family-monospace;
+  font-size: $font-size-small;
+  font-weight: bold;
+}
+
 a, span.exturl {
   border-bottom: 1px solid $link-decoration-color;
   color: var(--link-color);
@@ -57,10 +63,6 @@ a, span.exturl {
 
   // For spanned external links.
   cursor: pointer;
-}
-
-sup {
-  background: #ffbb99;
 }
 
 iframe, img, video {
